feat(app): update loader for app startup

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root class="app">
+    <div class="app__loading" >
+      <img class="app__image" src="assets/icons/app-icon.png">
+    </div>
+  </app-root>
 </body>
 </html>
